--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@types/lodash": "^4.14.199",
+    "add": "^2.0.6",
     "axios": "^1.5.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "yarn": "^1.22.19",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
